bugfix: Make AREDN(TM) Logo visible in "night" mode

--- a/files/www/day.css
+++ b/files/www/day.css
@@ -24,5 +24,5 @@ body table {
 
 .TopBanner { width:100%; }
 .LogoDiv { position:absolute left:0px; width:100%; height:95; }
-.AREDNLogo { position:absolute; left:10%; width:175; height:95; }
+.AREDNLogo { background:rgb(231,231,231);  position:absolute; left:10%; width:175; height:95; }
 .PartOfAREDN { font-family:Verdana; font-size:xx-small; text-align:center; }
